Try to prevent scrolling on iOS

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     overflow: hidden;
 }
 
+body {
+	position: fixed;
+}
+
 #text {
     position: absolute;
     top: 0;
